# xlab-test

./: README.md  dev.sh  env.dev  migrate.py  pyproject.toml
app/: main.py
app/api/: router.py
app/api/endpoints/: user_data.py
app/applications/: user_data.py
app/core/: settings.py
app/core/db/: base.py  manager.py
app/core/redis/: client.py
app/models/: user_data.py
app/schemas/: user_data.py
app/services/dadata/: api.py  dtos.py
migrations/: 001_create_user_data_table.py
tests/: main_test.py
