[tool.poetry]
name = "xlab"
version = "0.1.0"
description = ""
authors = ["anton <angeloffree@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = {extras = ["email"], version = "^1.10.4"}
fastapi = "^0.92.0"
uvicorn = "^0.20.0"
coloredlogs = "^15.0.1"
python-dotenv = "^0.21.1"
peewee = "^3.15.4"
peewee-async = "^0.8.0"
peewee-migrate = "^1.6.6"
aiopg = "^1.4.0"
aiohttp = "^3.8.4"
redis = "^4.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
